--- a/app/views/invitation_mailer/EO/Virtual 5 Day Workshop-Not Yet Invited.text.erb
+++ b/app/views/invitation_mailer/EO/Virtual 5 Day Workshop-Not Yet Invited.text.erb
@@ -2,8 +2,8 @@ Dear <%= @person.dear_name %>,
 
 You are invited to attend the following event, online:
 
-Workshop: <%= @event.name %> (<%= @event.code %>)
-On: <%= @event.dates(:long) %>
+<%= @event.name %> (<%= @event.code %>), <%= @event_start %> to <%= @event_end %>. The workshop will begin on Monday morning, and end on Friday mid-day.
+
 URL: <%= @event.url %>
 Organizers: <%= @organizers %>
 
