Fix 404 and and apple-touch-icon routing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="apple-touch-icon" href="/icons/favicon-32x32.png"/>
+    <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <!-- MathJax to display math -->
