changes to max participants and rsvp deadlines

--- a/app/views/memberships/show.html.erb
+++ b/app/views/memberships/show.html.erb
@@ -1,4 +1,4 @@
-`<article>
+<article>
   <div class="member-show d-flex flex-wrap align-content-stretch align-self-start">
     <div class="d-flex flex-column">
       <div class="card p-2 member-show profile">
